# xphone-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  PLAN-VIDEO.md  README.md  TODO-v0.2.1.md
.github/workflows/: ci.yml  publish.yml
examples/: sipcli.rs
src/: call.rs  callback_pool.rs  config.rs  dialog.rs  dialog_info.rs  dtmf.rs  error.rs  ice.rs  jitter.rs  lib.rs  media.rs  mwi.rs  phone.rs  registry.rs  rtcp.rs  sdp.rs  srtp.rs  stun.rs  subscription.rs  transport.rs  turn.rs  types.rs
src/codec/: g722.rs  g729_codec.rs  mod.rs  opus_codec.rs  pcma.rs  pcmu.rs
src/mock/: call.rs  dialog.rs  mod.rs  phone.rs  transport.rs
src/sip/: auth.rs  client.rs  conn.rs  dialog.rs  message.rs  mod.rs  transaction.rs  ua.rs
src/trunk/: auth.rs  config.rs  dialog.rs  mod.rs  server.rs  util.rs
src/video/: h264.rs  mod.rs  vp8.rs
tests/: fakepbx_test.rs  integration_test.rs  server_test.rs  turn_test.rs
testutil/docker/: docker-compose.yml
testutil/docker/asterisk/: asterisk.conf  entrypoint.sh  extensions.conf  logger.conf  modules.conf  pjsip.conf  rtp.conf
testutil/docker/coturn/: turnserver.conf
