[package]
name = "xphone"
version = "0.1.0"
edition = "2021"
description = "SIP telephony library with event-driven API"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
crossbeam-channel = "0.5"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
parking_lot = "0.12"
bytes = "1"
md5 = "0.7"

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }
