[package]
name = "xphone"
version = "0.2.0"
edition = "2021"
rust-version = "1.87"
description = "SIP telephony library with event-driven API — handles SIP signaling, RTP media, codecs, and call state"
license = "MIT"
repository = "https://github.com/x-phone/xphone-rust"
homepage = "https://github.com/x-phone/xphone-rust"
documentation = "https://docs.rs/xphone"
readme = "README.md"
exclude = ["testutil/", ".github/", "Makefile"]
keywords = ["sip", "voip", "telephony", "rtp", "audio"]
categories = ["multimedia::audio", "network-programming"]

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
crossbeam-channel = "0.5"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
parking_lot = "0.12"
bytes = "1"
md5 = "0.7"
rustls = { version = "0.23", features = ["ring"] }
webpki-roots = "0.26"
getrandom = "0.2"
quick-xml = "0.37.5"
aes = { version = "0.8", features = ["zeroize"] }
sha1 = "0.10"
hmac = "0.12"
zeroize = "1"

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }
crossbeam-channel = "0.5"
fakepbx = "0.1.0"

[[example]]
name = "sipcli"
required-features = ["cli"]

[dependencies.ratatui]
version = "0.29"
optional = true

[dependencies.crossterm]
version = "0.28"
optional = true

[dependencies.clap]
version = "4"
features = ["derive"]
optional = true

[dependencies.serde]
version = "1"
features = ["derive"]
optional = true

[dependencies.serde_yaml]
version = "0.9"
optional = true

[dependencies.dirs-next]
version = "2"
optional = true

[dependencies.cpal]
version = "0.15"
optional = true

[dependencies.opus]
version = "0.3"
optional = true

[dependencies.g729-sys]
version = "0.1"
optional = true

[features]
integration = []
opus-codec = ["opus"]
g729-codec = ["g729-sys"]
cli = ["ratatui", "crossterm", "clap", "serde", "serde_yaml", "dirs-next", "cpal"]
